# INFORMATIQUE-GRAPHIQUE

TP1/: CMakeLists.txt  scene01.txt
TP1/src/: Couleur.hpp  Intensite.cpp  Intensite.hpp  Materiau.hpp  Objet.cpp  Objet.hpp  Plan.cpp  Plan.hpp  Point.cpp  Point.hpp  Scene.cpp  Scene.hpp  Source.cpp  Source.hpp  Sphere.cpp  Sphere.hpp  Vecteur.cpp  Vecteur.hpp  lr.cpp
TP2/: CMakeLists.txt
TP2/src/: Couleur.cpp  Image.cpp  Intensite.hpp  Materiau.cpp  Objet.hpp  Plan.cpp  Plan.hpp  Point.cpp  Point.hpp  Sphere.hpp  lr.cpp
TP3/: CMakeLists.txt
TP3/src/: Camera.cpp  Camera.hpp  Couleur.hpp  Image.cpp  Image.hpp  Intensite.cpp  Intersection.cpp  Intersection.hpp  Materiau.cpp  Materiau.hpp  Objet.cpp  Plan.cpp  Point.cpp  Point.hpp  Rayon.cpp  Rayon.hpp  Scene.cpp  Scene.hpp  Source.hpp  Sphere.cpp  Sphere.hpp  Vecteur.cpp  Vecteur.hpp  lr.cpp
TP4/src/: Couleur.cpp  Couleur.hpp  Intensite.cpp  Intensite.hpp  Intersection.cpp  Intersection.hpp  Objet.hpp  Plan.cpp  Plan.hpp  Point.cpp  Scene.cpp  Source.cpp  Sphere.cpp  Sphere.hpp  Vecteur.cpp  Vecteur.hpp  lr.cpp
